Fixed font sizes and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,14 @@ h3 {
 }
 
 h2 {
+  font-size: 1.3rem;
   text-transform: uppercase;
-  padding: 50px 0;
+  padding: 30px 0;
+}
+
+h3 {
+  font-size: 1.7rem;
+  font-weight: normal;
 }
 
 p {
@@ -38,22 +44,25 @@ img {
 
 .about-text,
 .contact-blurb {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   line-height: 2rem;
 }
 
 .portfolio {
   text-align: center;
   background: #fff;
+  padding-top: 20px;
   padding-bottom: 20px;
 }
 
 .portfolio-container {
+  padding-top: 20px;
   padding-bottom: 30px;
 }
 
 .contact {
   text-align: center;
+  padding-top: 40px;
   padding-bottom: 60px;
 }
 
